--- a/nginx.conf
+++ b/nginx.conf
@@ -8,18 +8,56 @@ events {
 }
 
 http {
-         server {
-            listen 80;
-            server_name localhost 127.0.0.1;
+    sendfile on;
+    large_client_header_buffers 4 32k;
 
-            location / {
-                proxy_pass          http://frontend:80;
-                proxy_set_header    X-Forwarded-For $remote_addr;
-            }
+    server {
+        listen 80;
+        server_name ip21sy2 127.0.0.1;
 
-            location /api {
-                proxy_pass          http://backend:3000/api;
-                proxy_set_header    X-Forwarded-For $remote_addr;
-            }
+        location / {
+            return 301 https://$host$request_uri;
         }
+    }
+    server {
+        listen 443 ssl;
+        server_name ip21sy2;
+
+        ssl_certificate /etc/ssl/certs/ip21sy2.crt;
+        ssl_certificate_key /etc/ssl/private/ip21sy2.key;
+
+       location / {
+            proxy_pass         http://frontend:80;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_buffer_size           128k;
+            proxy_buffers               4 256k;
+            proxy_busy_buffers_size     256k;
+        }
+
+        location /api {
+            proxy_pass         http://backend:3000/api;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_buffer_size           128k;
+            proxy_buffers               4 256k;
+            proxy_busy_buffers_size     256k;
+        }
+    }
 }
