--- a/nginx.conf
+++ b/nginx.conf
@@ -11,20 +11,26 @@ http {
     sendfile on;
     large_client_header_buffers 4 32k;
 
+
     server {
         listen 80;
-        server_name ip21sy2 127.0.0.1;
+        server_name intproj21.sit.kmutt.ac.th/sy2;
 
-        location / {
-            return 301 https://$host$request_uri;
-        }
+        rewrite ^(.*) https://$host$1 permanent;
     }
+    
     server {
         listen 443 ssl;
-        server_name ip21sy2;
+        server_name intproj21.sit.kmutt.ac.th/sy2;
 
         ssl_certificate /etc/ssl/certs/ip21sy2.crt;
         ssl_certificate_key /etc/ssl/private/ip21sy2.key;
+
+        ssl_session_cache shared:SSL:1m;
+        ssl_session_timeout 5m;
+        ssl_protocols SSLv2 SSLv3 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
        location / {
             proxy_pass         http://frontend:80;
