--- a/nginx.conf
+++ b/nginx.conf
@@ -14,14 +14,14 @@ http {
 
     server {
         listen 80;
-        server_name intproj21.sit.kmutt.ac.th/sy2;
+        server_name intproj21.sit.kmutt.ac.th;
 
         rewrite ^(.*) https://$host$1 permanent;
     }
     
     server {
         listen 443 ssl;
-        server_name intproj21.sit.kmutt.ac.th/sy2;
+        server_name intproj21.sit.kmutt.ac.th;
 
         ssl_certificate /etc/ssl/certs/ip21sy2.crt;
         ssl_certificate_key /etc/ssl/private/ip21sy2.key;
