--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
 
-        rewrite ^(.*) https://$host$1 permanent;
+        rewrite ^(.*) https://$host$1/sy2 permanent;
     }
     
     server {
