--- a/nginx.conf
+++ b/nginx.conf
@@ -15,8 +15,7 @@ http {
     server {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
-
-        rewrite ^(.*) https://$host$1/sy2 permanent;
+        return 301 https://$host$request_uri;
     }
     
     server {
