--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     server {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
-        return 301 https://$host$request_uri;
+        return 301 https://$host/sy2$request_uri;
     }
     
     server {
