--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,10 @@ http {
     sendfile on;
     large_client_header_buffers 4 32k;
 
-
     server {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
-        return 301 https://$host/sy2$request_uri;
+        return 301 https://intproj21.sit.kmutt.ac.th/sy2/$request_uri;
     }
     
     server {
