--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
     server {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
-        return 301 https://intproj21.sit.kmutt.ac.th/sy2/$request_uri;
+        return 301 https://$host$request_uri;
     }
     
     server {
