--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,11 @@ http {
     server {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
-        # return 301 https://$host$request_uri;
-        rewrite ^/(.*)$ https://intproj21.sit.kmutt.ac.th/sy2/$1 permanent;
+        location / {
+            return 301 https://$host$request_uri;
+        }
+        return 301 https://$host$request_uri;
+        # rewrite ^/(.*)$ https://intproj21.sit.kmutt.ac.th/sy2/$1 permanent;
     }
     
     server {
