--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         listen 80;
         server_name intproj21.sit.kmutt.ac.th;
         location / {
-            return 301 https://$host$request_uri;
+            return 301 https://intproj21.sit.kmutt.ac.th/sy2$request_uri;
         }
         return 301 https://$host$request_uri;
         # rewrite ^/(.*)$ https://intproj21.sit.kmutt.ac.th/sy2/$1 permanent;
@@ -32,7 +32,7 @@ http {
         ssl_session_timeout 5m;
         ssl_protocols SSLv2 SSLv3 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        # ssl_prefer_server_ciphers on;
 
        location / {
             proxy_pass         http://frontend:80;
