--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
         location / {
             return 301 https://intproj21.sit.kmutt.ac.th/sy2$request_uri;
         }
-        return 301 https://$host$request_uri;
+        # return 301 https://$host$request_uri;
         # rewrite ^/(.*)$ https://intproj21.sit.kmutt.ac.th/sy2/$1 permanent;
     }
     
